force-app/main/default/objects/Custom_by_ramya__c/Custom_by_ramya__c.object-meta.xml
<CustomObject>
    <label>Custom by ramya</label>
    <nameField>
        <label>Custom by ramya Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom by ramyas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>