force-app/main/default/objects/Custom_by_ramya__c/fields/Custom_phone__c.field-meta.xml
<CustomField>
    <fullName>Custom_phone__c</fullName>
    <label>Custom phone</label>
    <type>Phone</type>
</CustomField>