force-app/main/default/objects/Custom_by_ramya__c/fields/Time_period__c.field-meta.xml
<CustomField>
    <fullName>Time_period__c</fullName>
    <label>Time period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 month</fullName>
            </value>
            <value>
                <fullName>2 months</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>4 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>