force-app/main/default/objects/Custom_by_ramya__c/recordTypes/Custom_record_type.recordType-meta.xml
<RecordType>
    <fullName>Custom_record_type</fullName>
    <active>true</active>
    <label>Custom record type</label>
</RecordType>